Fix spacing under lists on help pages

--- a/app/assets/stylesheets/responsive/custom.scss
+++ b/app/assets/stylesheets/responsive/custom.scss
@@ -797,6 +797,10 @@ dt {
   }
 }
 
+ul {
+  margin-bottom: 1em;
+}
+
 /* Front page */
 /* Drop the extract indentation on small screens */
 #frontpage_examples {
